--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>世界上最美的女人</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="哈哈哈" />
-	<meta name="description" content="就是世界上最美的男人，是依依" />
+	<meta name="keywords" content="世界上最美的女人" />
+	<meta name="description" content="就是这么简单" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
